--- a/src/common/StreamingServerWarning/styles.less
+++ b/src/common/StreamingServerWarning/styles.less
@@ -43,6 +43,9 @@
             font-size: 1.2rem;
             max-height: 1.2em;
             color: @color-surface-light5-90;
+            padding: 8px 12px;
+            margin: -8px -12px;
+            box-sizing: content-box;
         }
     }
 
