--- a/src/routes/Search/styles.less
+++ b/src/routes/Search/styles.less
@@ -19,6 +19,10 @@
         width: 100%;
         overflow-y: auto;
 
+        &.hints {
+            height: 100%;
+        }
+
         .search-row {
             margin: 4rem 2rem;
         }
@@ -282,7 +286,6 @@
             }
 
             .search-hints-wrapper {
-                margin-top: 4rem;
                 .search-hints-container {
                     padding: 4rem 2rem;
                     .search-hint-container {
