--- a/src/routes/Settings/styles.less
+++ b/src/routes/Settings/styles.less
@@ -22,7 +22,15 @@
     background-color: transparent;
 
     .settings-content {
+        --top-overlay-size: var(--horizontal-nav-bar-size);
+        --bottom-vertical-nav-bar-size: 0px;
+        --bottom-overlay-size: var(--bottom-vertical-nav-bar-size);
+
         width: 100%;
+        height: calc(100% + var(--bottom-overlay-size) + var(--top-overlay-size));
+        margin-bottom: calc(var(--bottom-overlay-size) * -1);
+        margin-top: calc(var(--top-overlay-size) * -1);
+        padding-top: var(--top-overlay-size);
         display: flex;
         flex-direction: row;
 
@@ -77,6 +85,10 @@
             align-self: stretch;
             padding: 0 3rem;
             overflow-y: auto;
+            height: calc(100% + var(--top-overlay-size));
+            margin-top: calc(var(--top-overlay-size) * -1);
+            padding-top: var(--top-overlay-size);
+            padding-bottom: var(--bottom-overlay-size);
 
             .section-container {
                 display: flex;
@@ -468,12 +480,15 @@
         .settings-content {
             flex-direction: column-reverse;
 
+            --bottom-vertical-nav-bar-size: var(--vertical-nav-bar-size);
+
             .side-menu-container {
                 display: none;
             }
 
             .sections-container {
-                padding: 0 1.5rem;
+                padding-right: 1.5rem;
+                padding-left: 1.5rem;
 
                 .section-container {
                     .user-info-option-container {
